@@ -2,6 +2,7 @@ Sun Feb  8 21:39:06 2009  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/open-uri.rb: add :read_timeout option.
 	  [ruby-core:4848] (r9166)
+	  (:proxy_http_basic_authentication): new option. (r9336)
 
 Mon Feb  9 01:21:16 2009  Tanaka Akira  <akr@fsij.org>
 
